# TheFox

./: CMakeLists.txt
TheFoxEngine/: CMakeLists.txt
TheFoxEngine/include/: EntryPoint.h
TheFoxEngine/include/framework/: Actor.h  ActorComponent.h  Animation.h  AnimationComponent.h  Application.h  AssetManager.h  Character.h  Core.h  Delegate.hpp  InputManager.h  Math.h  Object.h  World.h
TheFoxEngine/src/: EntryPoint.cpp
TheFoxEngine/src/framework/: Actor.cpp  ActorComponent.cpp  Animation.cpp  AnimationComponent.cpp  Application.cpp  AssetManager.cpp  Character.cpp  InputManager.cpp  Math.cpp  Object.cpp  World.cpp
TheFoxGame/: CMakeLists.txt  config.h.in
TheFoxGame/include/: config.h
TheFoxGame/include/gameFramework/: GameApplication.h
TheFoxGame/include/level/: MainLevel.h
TheFoxGame/include/player/: Player.h
TheFoxGame/src/gameFramework/: GameApplication.cpp
TheFoxGame/src/level/: MainLevel.cpp
TheFoxGame/src/player/: Player.cpp
